# nix-minecraft-servers

./: LICENSE  README.md  ci.nix  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  update.yml
ci/: default.nix  pyproject.toml  readme.py
ci/minecraft_servers/: __init__.py  __main__.py  airplane.py  aliases.py  common.py  paper.py  purpur.py  readme.py  vanilla.py  velocity.py  waterfall.py
ci/nix_minecraft_servers/: airplane.py  purpur.py  vanilla.py
nix_minecraft_servers/: __init__.py  __main__.py  airplane.py  buildtools.py  common.py  paper.py  purpur.py  vanilla.py  velocity.py  waterfall.py
nix_minecraft_servers/pkgs/: __init__.py  common.py  paper.py  purpur.py  vanilla.py
nixpkgs_minecraft/: __init__.py
pkgs/: airplane.json  buildtools.json  default.nix  derivation.nix  paper.json  paper.nix  purpur.json  purpur.nix  vanilla.json  velocity.json  velocity.nix  waterfall.json
