[tool.poetry]
name = "nixpkgs-minecraft"
version = "0.1.0"
description = ""
authors = ["Joel <joel@joel.tokyo>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^10.15.2"
requests = "^2.26.0"
dataclasses-json = "^0.5.6"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.910"
pytest = "^6.2.5"
types-requests = "^2.26.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.mypy]
install_types = true
ignore_missing_imports = true
non_interactive = true
strict = true
